k8s/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: presence
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend

    spec:
      imagePullSecrets:
        - name: gitlab-registry-secret
      containers:
        - name: backend
          image: registry.gitlab.com/victorino.hairun/presence/staging/api:dev
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
