k8s/studio-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: studio
  namespace: presence
spec:
  replicas: 1
  selector:
    matchLabels:
      app: studio

  template:
    metadata:
      labels:
        app: studio

    spec:
      imagePullSecrets:
        - name: gitlab-registry-secret
      containers:
        - name: studio
          image: registry.gitlab.com/victorino.hairun/presence/staging/api:dev

          command:
            - sh
            - -c
            - npx prisma studio --hostname 0.0.0.0 --port 5555

          ports:
            - containerPort: 5555
