k8s/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: presence
spec:
  selector:
    app: frontend
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 31001
