k8s/presence-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: presence-ingress
  namespace: presence
spec:
  ingressClassName: traefik

  rules:
    - host: api-presence-dev.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 3000

    - host: studio-presence-dev.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: studio-service
                port:
                  number: 5555

    - host: front-presence-dev.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
